@@ -15,6 +15,8 @@
   </div>
 </tal:widgets>
 
+<metal:use use-macro="context/@@singing-macros/actions" />
+
 <tal:subforms define="subforms nocall:view/subforms"
               repeat="view subforms">
 
